BMSSimplificationEclipseWS/zEUFULL-PRODMigration-MetadataWithPermsXLation/src/objects/PII_Data_HCPTS__c.object
<CustomObject>
    <description>Contains PII data for Payee records</description>
    <fields>
        <fullName>Account_Number_HCPTS__c</fullName>
        <description>Payee Account Number</description>
        <encrypted>true</encrypted>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Address_HCPTS__c</fullName>
        <description>Bank Address</description>
        <encrypted>true</encrypted>
        <label>Bank Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Branch_Number_HCPTS__c</fullName>
        <encrypted>true</encrypted>
        <label>Bank Branch Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_City_HCPTS__c</fullName>
        <description>Bank City from ICF</description>
        <encrypted>true</encrypted>
        <label>Bank City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Country_HCPTS__c</fullName>
        <description>Bank Country</description>
        <encrypted>true</encrypted>
        <label>Bank Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Name_HCPTS__c</fullName>
        <description>Bank Name</description>
        <encrypted>true</encrypted>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Number_HCPTS__c</fullName>
        <encrypted>true</encrypted>
        <label>Bank Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_Postal_Code_HCPTS__c</fullName>
        <description>Bank Postal Code from ICF</description>
        <encrypted>true</encrypted>
        <label>Bank Postal Code</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bank_State_Province_HCPTS__c</fullName>
        <description>Bank State/Province from ICF</description>
        <encrypted>true</encrypted>
        <label>Bank State/Province</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Party_Tax_ID_2_HCPTS__c</fullName>
        <encrypted>true</encrypted>
        <label>Tax ID 2</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Party_Tax_ID_3_HCPTS__c</fullName>
        <encrypted>true</encrypted>
        <label>Tax ID 3</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Party_VAT_ID_HCPTS__c</fullName>
        <description>Payee VAT ID</description>
        <encrypted>true</encrypted>
        <label>Payee VAT ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Tax_ID_HCPTS__c</fullName>
        <description>Payee Tax ID</description>
        <encrypted>true</encrypted>
        <label>Payee Tax ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_By_HCTPS__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+CreatedById, CreatedBy.FirstName + &quot; &quot; + CreatedBy.LastName) + &quot;, &quot; + 
TEXT(MONTH(DATEVALUE(CreatedDate )))+&quot;/&quot;+TEXT(DAY(DATEVALUE(CreatedDate )))+&quot;/&quot;+TEXT(YEAR(DATEVALUE(CreatedDate )))</formula>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IBAN_Number_HCPTS__c</fullName>
        <description>IBAN Number</description>
        <encrypted>true</encrypted>
        <label>IBAN #</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_HCPTS__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+LastModifiedById, LastModifiedBy.FirstName + &quot; &quot; + LastModifiedBy.LastName) + &quot;, &quot; + 
TEXT(MONTH(DATEVALUE(LastModifiedDate)))+&quot;/&quot;+TEXT(DAY(DATEVALUE(LastModifiedDate)))+&quot;/&quot;+TEXT(YEAR(DATEVALUE(LastModifiedDate)))</formula>
        <label>Last Modified By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Swift_Code_HCPTS__c</fullName>
        <description>Swift/BIC Code</description>
        <encrypted>true</encrypted>
        <label>Swift /BIC Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VAT_Registration_Number_HCPTS__c</fullName>
        <label>zVAT Registration Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>PII Data</label>
    <nameField>
        <displayFormat>PII-{0000}</displayFormat>
        <label>PII Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PII Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>